--- a/styles/global.css
+++ b/styles/global.css
@@ -22,6 +22,7 @@
     --gray-500: #756c71;
     --gray-400: #d3cfd2;
     --gray-300: #dfdcdf;
+    --gray-100: #F4F1F2;
 
     /*fonte*/
     --ff-sans: "Oxygen", serif;
@@ -32,7 +33,8 @@
 
     /*tamanhos de fonte*/
     /*rem olha sempre pra font base do navegador, que é 16px default (exceto se for alterado pelo usuário)*/
-    --fs-sm: 0.75rem;
+    --fs-xs: 0.75rem;
+    --fs-sm: 0.875rem;
     --fs-base: 0.875rem;
     --fs-lg: 1rem;
     --fs-xl: 1.125rem;
@@ -47,5 +49,12 @@ html{
 
     color: var(--gray-500);
     background: var(--bg-color);
+}
+
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
