--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,8 @@ main{
     display: flex;
     justify-content: space-between;
     margin-top: 4rem;
+    gap: 1.5rem;
+    height: 29.125rem;
 
     & #first-section{
         display: flex;
@@ -14,7 +16,7 @@ main{
             justify-content: flex-start;
             background-color: var(--gray-100);
             padding: 1rem 1rem 1rem 1rem;
-            border: 1px solid var(--gray-300);
+            border: 1px solid var(--gray-border);
             border-radius: 1rem;
             
             & div#img{
@@ -66,15 +68,12 @@ main{
             /* height: 20rem; */
             /* width: 22.5rem; */
             background-color: var(--gray-100);
-            border: 1px solid var(--gray-300);
+            border: 1px solid var(--gray-border);
             padding:  1.75rem 1.75rem 1rem 1.50rem ;
             border-radius: 1rem;
 
-            overflow-y: scroll;
-
-            & ::-webkit-scrollbar {
-                width: 200px;
-            }
+            overflow-y: auto;
+            scroll-behavior: smooth;
 
             & div#title{
                 display: flex;
@@ -141,11 +140,187 @@ main{
                 }    
             }
         }
+
+        & #historical::-webkit-scrollbar {
+            width: .375rem; /* Largura da barra de rolagem */
+        }
+
+        & #historical::-webkit-scrollbar-thumb {
+            background-color: var(--gray-300); /* Cor do indicador de rolagem */
+            border-radius: 11rem;
+        }
+
+        & #historical::-webkit-scrollbar-track {
+            background: #f0f0f0; /* Cor do fundo da track */
+            border-radius: 10px;  /* Bordas arredondadas */
+            margin: 4px;  /* Afastamento da borda do contêiner */
+        }
+
+        & #historical::-webkit-scrollbar-track {
+            margin: 40px;  /* Afastamento da borda do contêiner */
+        }
+
     }
 
     & #second-section{
-        display: block;
-        width: 20rem;
-        height: 20rem;
+        display: flex;
+        flex-direction: column;
+        width: 35.5rem;
+
+        & #main-content{
+            display: flex;
+            flex-direction: column;
+            flex: 1;
+            background-color: var(--gray-100);
+            border-radius: 1rem;            
+            padding-bottom: 2rem;
+            margin-bottom: 1rem;
+            border: 1px solid var(--gray-border);
+        
+            & #loyalty-card{
+                display: flex;
+                flex-direction: row;
+                padding: 2rem;
+                /* justify-content: space-between; */
+                width: 100%;
+
+
+                & #messages{
+                    display: flex;
+                    align-items: flex-start;
+                    flex-direction: column;
+    
+                    & strong{
+                        font-size: var(--fs-xs);
+                        font-weight: var(--fw-bold);
+                        text-transform: uppercase;
+                    }
+    
+                    & span{
+                        margin-top: .25rem;
+                        font-size: var(--fs-xs);
+                        font-weight: var(--fw-light);
+                    }
+                }
+
+                & #id{
+                    justify-content: center;
+                    align-items: center;
+
+                    & strong{
+                        background-color: var(--gray-300);
+                        padding-block:0.375rem;
+                        padding-inline: 0.75rem;
+                        font-weight: var(--fw-bold);
+                        font-size: var(--fs-sm);
+                        border-radius: 1rem;
+                    }
+                }
+            }
+
+            & #images-check{
+                display: grid;
+                grid-template-columns: repeat(5, 1fr);
+                grid-template-rows: repeat(2, 1fr);
+                gap: 1rem;
+
+                    & .image-check{
+                        position: relative;
+                        background-color: var(--gray-300);
+                        width: 5.5rem;
+                        height: 5.5rem;
+                        border-radius: 1.3rem;
+
+                        & img{
+                            position: absolute;
+                            top: 50%; 
+                            left: 50%;
+                            transform: translate(-50%,-50%);
+                        }
+                    }                
+                }
+        }
+
+        & #count-remaining{
+            display: flex;
+            flex-direction: row;
+            background-color: var(--gray-100);
+            width: 100%;
+            border-radius: 1rem;
+            padding: 1.41rem 2rem;
+            border: 1px solid var(--gray-border);
+
+            & div#titlePlusBar{
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                flex: 1;
+                gap: 1rem;
+
+                & div#remaining{
+                    display: flex;
+                    flex-direction: row;
+                    align-items: baseline;
+    
+                    & strong {
+                        font-size: var(--fs-2xl);
+                        font-weight: var(--fw-bold);
+                        color: var(--gray-600);
+                    }
+    
+                    & span{
+                        font-size: var(--fs-xl);
+                        font-weight: var(--fw-light);
+                        margin-left: .4rem;
+                    }
+                }
+    
+                & div#bar-content{
+                    display: flex;
+                    flex-direction: row;
+                    width: 100%;
+
+                    & div#fullBar{
+                        flex: 1;
+                        position: relative;
+                        height: .5rem;
+                        background-color: var(--gray-300);
+                        border-radius: 8rem;
+                        overflow: hidden;
+
+                        & div#progressBar{
+                            position: absolute;
+                            left: 0;
+                            background: linear-gradient(to right, green, lightblue, darkblue, rgb(209, 98, 116));
+                            height: 100%;
+                            width: 70%;
+                            border-radius: 8rem;
+                        }
+                    }
+                    & span{
+                        margin-left: .75rem;
+                        font-size: var(--fs-xs);
+                    }
+                }
+                    
+            }
+
+            & div#giftImage{
+                position: relative;
+                height: 4.5rem;
+                width: 4.5rem;
+                border-radius: 100%;
+                background-color: var(--gray-300);
+                margin-left: 2rem;
+
+                & img{
+                    position: absolute;
+                    top: 60%; 
+                    left: 50%;
+                    transform: translate(-50%,-50%);
+                }
+            }
+
+        }
     }
 }
