--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,17 +1,17 @@
-header{
+header {
     display: flex;
     width: 100%;
     justify-content: center;
     align-items: center;
     margin-top: 4rem;
 
-    & div#content{
+    & div#content-header {
         display: flex;
         flex-direction: column;
         align-items: center;
         width: 21.94rem;
-        
-        & #input-wrapper{
+
+        & #input-wrapper {
             display: flex;
             flex-direction: row;
             background-color: var(--gray-border);
@@ -30,7 +30,7 @@ header{
                 color: var(--gray-500);
                 padding-inline: .5rem;
 
-                & :focus-within{
+                & :focus-within {
                     border: none;
                 }
             }
@@ -40,7 +40,8 @@ header{
                 appearance: none;
                 display: none;
             }
-            & div#submitIcon{
+
+            & div#submitIcon {
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -55,17 +56,17 @@ header{
 }
 
 @media (max-width: 381px) {
-    header{
+    header {
         width: 381px;
         margin-top: 2rem;
         padding-inline: 1rem;
 
-        & div#content{
+        & div#content-header {
             display: flex;
             width: 100%;
-            
 
-            & div#input-wrapper{
+
+            & div#input-wrapper {
                 flex: 1;
                 margin-top: 1rem;
             }
